# RocLang

./: LICENSE.md  README.md  index.html  params.json
ROS/: README.md
ROS/roc/: CMakeLists.txt
ROS/roc/msg/: Command.msg  Motion.msg  README.md  movement.msg
RocDemo/: Readme.md
RocDemo/RocDemoArduino/: CMakeLists.txt
RocDemo/RocDemoArduino/src/: main.cpp
RocDemo/RocDemoController/: ActionUnitJointAdapter.py  FileEventHandler.py  Readme.md  Scheduler.py  Watchdog.py
RocDemo/RocDemoController/config/: config.json
RocDemo/RocDemoController/models/: ActionUnit.py  Joint.py  Motion.py  Movement.py
RocDemo/RocDemoController/test/: test2.json
RocDemo/arduino/: Readme.md  platformio.ini
RocDemo/arduino/src/: Joint.cpp  Joint.h  main.cpp
RocDemo/roc/: README.md  package.xml
RocDemo/roc/scripts/: MessgeTest.py  Watchdog.py
RocDemo/roc_node/: .gitignore  CMakeLists.txt  README.md
RocDemo/roc_node/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  roc-msg-extras.cmake.develspace.in  roc-msg-extras.cmake.installspace.in  setup_cached.sh
RocDemo/roc_node/devel/: .catkin  (+2 more)
RocLang/: README.md
RocLang copy/: README.md
RocLang copy/robot.control.roc.parent/: README.MD  build.gradle  pom.xml  settings.gradle
RocLang/.metadata/: version.ini
RocLang/robotcontrol.parent/: .project  pom.xml
runtime-EclipseApplication/Roc/: HelloRoc.roc
runtime-EclipseApplication/TestProject/: test.roc
update/: site.xml
update-site/: site.xml
update-site2/: site.xml
update-site3/: .project
(+545 files in other folders)
