<?xml version="1.0"?>
<package>
  <name>roc</name>
  <version>0.1.0</version>
  <description>Package containing the Roc message types used for communication.</description>
  <maintainer email="iliadobrusin@freenet.de">iliadobrusin</maintainer>
  <license>Unlicense</license>
  <url type="website">https://github.com/idobrusin/RocLang</url>
  <author email="iliadobrusin@freenet.de">iliadobrusin</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
